# Drug-Deepsearch-PAP

./: .cache_step2_llm.json  .dockerignore  .gitignore  API_TEST.md  Dockerfile  FLOW_DIAGRAMS.md  KNOWLEDGE_TRANSFER.md  MIGRATION_COMPLETE.md  OPTIMIZATION_NOTES.md  QUICK_START.md  README.md  TECHNICAL_DOCUMENTATION.md  abemaciclib.md  agent.py  agent_JN_latest_changes.py  app.py  configuration.py  deploy.sh  generate_tech_doc_pdf.py  graph.py  install.sh  main.py  prompts.py  pyproject.toml  railway.toml  render.yaml  report_olaparib.md  requirements.txt  state.py  utils.py
.cache/step2/: drug_status.json  llm_cache.json
.ebextensions/: 01_flask.config  02_packages.config
.tmp_step2_cache/: drug_status.json  drug_status_2.json
.tmp_step2_first5/: afatinib.md  alectinib.md  amivantamab.md  atezolizumab.md
.tmp_step2_test_out/: necitumumab.json
output/step1_deepsearch/: abemaciclib.md  dostarlimab.md  entrectinib.md  everolimus.md  exemestane.md  (+12 more)
prompts/: prompt3b_before_after_adminstration_matrix.txt
src/: Step2_pathway_fact_check_extraction.py  Step2_pathway_fact_check_extraction_finalised.py  Step3_pathway_mapping_final.py  Step3_pathway_mapping_trial5.py  Step4_drug_admistrative_combinations.py  Step5_json_creation.py  Step6_final_json.py  agent_JN copy 2_lung_runfor10remaindrugs.py  agent_JN.py  main.py  main_JN.py  setup_nltk.py  step1_deepsearch.py  step1_md_to_schema_json.py
templates/: index.html
tests/: step1_md_to_schema_json_tests.py
utils/: breast_cancer_fda_drugs copy.txt  breast_cancer_fda_drugs.txt  lung_cancer_fda_guidelines_drugs.txt
(+123 files in other folders)
